--- a/Task-1 - Introduction to Web Development and HTML/index.html
+++ b/Task-1 - Introduction to Web Development and HTML/index.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  <body>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+      }
+        .container{
+           display: flex;
+           flex-direction: column;
+           align-items: center;
+           padding: 30px;
+           background-color: antiquewhite;
+           height: 100vh;
+        }
+        img{
+         
+            width: 20%;
+            height: 300px;
+            border-radius: 10px;
+        }
+        h1{
+          text-align: center;
+          color: rgb(255, 51, 0);
+          font-size: 28px;
+          margin: 10px;
+        }
+        li{
+          line-height: 1.5;
+         font-size: 18px;
+        }
+    </style>
+    <div class="container">
+      <img src="thomas.jpeg" alt="">
+       <h1>Thomas Edison</h1>
+       <ul>
+        <li>homas Alva Edison (February 11, 1847 – October 18, 1931) was an American inventor and businessman.</li>
+        <li> He developed many devices in fields such as electric power generation, mass communication, sound recording, and motion pictures.
+        </li>
+         <li>These inventions, which include the phonograph, the motion picture camera, and early versions of the electric light bulb, have had a widespread impact on the modern industrialized world.[
+        </li>
+         <li>He was one of the first inventors to apply the principles of organized science and teamwork to the process of invention, working with many researchers and employees. 
+        </li>
+         <li> He established the first industrial research laboratory.
+        </li>
+         <li>He won the 1921 Nobel Prize for Physics. This alone isn’t particularly surprising. What is surprising is the fact that he didn’t receive it for the general or special theory of relativity, but rather for the photoelectric effect.
+        </li>
+          <li>Edison was raised in the American Midwest; early in his career, he worked as a telegraph operator, which inspired some of his earliest inventions.
+        </li>
+       <li>In 1876, he established his first laboratory facility in Menlo Park, New Jersey, where many of his early inventions were developed.
+        </li>
+     </ul>
+      </div>
+  </body>
+  </html>
+
 
