--- a/Task-5 - Javascript Part3/For Loop/04/index.html
+++ b/Task-5 - Javascript Part3/For Loop/04/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,17 +8,14 @@
   </head>
   <body>
     <script>
-let start = 1;
-let end = 6;
-let breaker = 2;
+let index = 10;
+let jump = 2;
+let end = 0;
 
-for(let i=start;i<=end;i++){
-    
-        console.log(i);
-        for(let i=breaker;i<end;i+=breaker){
-          console.log(`--${i}`);
-        }
+for (let i=index;i>=(jump*jump);i-=jump) {
+    console.log(i)
 }
+
     </script>
   </body>
 </html>
