--- a/taske-5 -Javascript part4/Objects and Methods/02/index.html
+++ b/taske-5 -Javascript part4/Objects and Methods/02/index.html
@@ -1,41 +1,28 @@
-// The Object To Work With
-let myFavGames = {
-    "Trinity Universe": {
-        publisher: "NIS America",
-        price: 40,
-    },
-    "Titan Quest": {
-        publisher: "THQ",
-        bestThree: {
-        one: "Immortal Throne",
-        two: "Ragnarök",
-        three: "Atlantis",
-        },
-        price: 50,
-    },
-    YS: {
-        publisher: "Falcom",
-        bestThree: {
-        one: "Oath in Felghana",
-        two: "Ark Of Napishtim",
-        three: "origin",
-        },
-        price: 40,
-    },
-    };
-  // Code One => How To Get Object Length ?
-let objectLength = Object.keys(myFavGames).length;
-var keys = Object.keys( myFavGames );
-for (let i = 0; i < objectLength; i++) {
-    console.log(`The Game Name Is ${keys[i]}`);
-    console.log(`The Publisher Is ${myFavGames[keys[i]].publisher}`);
-    console.log(`The Price Is ${myFavGames[keys[i]].price}`);
-    // Check If Nested Object Has Property (bestThree)
-    if ('bestThree' in myFavGames[keys[i]]) {
-        console.log("- Game Has Releases");
-        console.log(`First => ${myFavGames[keys[i]].bestThree.one}`);
-        console.log(`Second => ${myFavGames[keys[i]].bestThree.two}`);
-        console.log(`Third => ${myFavGames[keys[i]].bestThree.three}`);
-    }
-    console.log("#".repeat(20));
-    }
+
+    / Method One
+// Create Your Object Here
+let objMethodOne={
+    property:"Method One",
+}
+console.log(objMethodOne.property); // "Method One"
+
+// Method Two
+// Create Your Object Here
+let objMethodTwo=new Object({property:"Method Two",})
+
+console.log(objMethodTwo.property); // "Method Two"
+
+=======
+// Method One
+// Create Your Object Here
+let objMethodOne={
+    property:"Method One",
+}
+console.log(objMethodOne.property); // "Method One"
+
+// Method Two
+// Create Your Object Here
+let objMethodTwo=new Object({property:"Method Two",})
+
+console.log(objMethodTwo.property); // "Method Two"
+
