--- a/Task-8 - JavaScript part6/Destructuring/05/index.html
+++ b/Task-8 - JavaScript part6/Destructuring/05/index.html
@@ -32,7 +32,7 @@ console.log(`My Favourite Games Style Is ${t} Style`);
   // My Favourite Games Style Is YS Style
 
 console.log(`And I Love ${d} Games`);
-  // And I Love Falcom Games
+  // And I Love Falcom Game
 
 console.log(`My Best Release Is ${o} It Released in ${u} & ${j}`);
   // My Best Release Is Oath In Felghana It Released in USA & Japan
